[project]
name = "fastsocial"
version = "0.1.0"
description = "FastAPI + Celery implementation of Daily Social workflow"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "python-dateutil>=2.9",
  "celery[redis]>=5.4",
  "redis>=5.0",
  "email-validator>=2.1",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
google = [
  "gspread>=6.0.0",
  "google-auth>=2.33.0",
]
dev = ["pytest", "pytest-asyncio", "ruff", "black"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
